[gd_scene load_steps=2 format=3 uid="uid://dj1we6c80g6qu"]

[ext_resource type="Script" uid="uid://d1fga54gufbob" path="res://Scenes/Menues/GameSelect/MenuButtons.gd" id="1_1hedf"]

[node name="GameSelect" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1hedf")

[node name="BACK" type="Button" parent="Control"]
layout_mode = 0
offset_left = 536.0
offset_top = 483.0
offset_right = 586.0
offset_bottom = 514.0
text = "BACK"

[node name="TicTacToe" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.725
anchor_top = 6.312
anchor_right = 6.725
anchor_bottom = 6.312
offset_left = -97.0
offset_top = -134.48
offset_right = -13.0
offset_bottom = -103.48
text = "TicTacToe"

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 339.0
offset_top = 117.0
offset_right = 394.0
offset_bottom = 148.0
text = "Snake
"

[connection signal="pressed" from="Control/BACK" to="Control" method="_on_back_pressed"]
[connection signal="pressed" from="Control/TicTacToe" to="Control" method="_on_tic_tac_toe_pressed"]
[connection signal="pressed" from="Control/Button" to="Control" method="_on_snake_pressed"]
